# drypart1

./: CMakeLists.txt  cat.c  dry.c  dry.h  dry_partb.c
